module path error resolved, removed extra spaces from login and register page

--- a/src/app/pages/authentication/lock/lock.component.scss
+++ b/src/app/pages/authentication/lock/lock.component.scss
@@ -35,7 +35,7 @@
 			box-shadow: 0 5px 12px rgba(0, 0, 0, .2);
 			position: relative;
 			width: 375px;
-			padding: 110px 30px 30px;
+			padding: 95px 30px 30px;
 		}
 
 		#register_wrapper {
