--- a/src/app/pages/authentication/login/login.component.scss
+++ b/src/app/pages/authentication/login/login.component.scss
@@ -35,7 +35,7 @@
 			box-shadow: 0 5px 12px rgba(0, 0, 0, .2);
 			position: relative;
 			width: 375px;
-			padding: 110px 30px 30px;
+			padding: 95px 30px 30px;
 		}
 
 		#register_wrapper {
@@ -63,7 +63,7 @@
 			h1 {
 				text-align: center;
 				font-size: 20px;
-				margin: 10px auto 50px;
+				margin: 10px auto 20px;
 			}
 		}
 	}
